environments/gloo-gateway/gateway-api/live/homer-app/base/config-examples/homer-config-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: homer-config-httproute
  namespace: homer-portal
  labels:
    example: homer-route
    gateway: https
spec:
  hostnames:
  - "demo.glooplatform.com"
  - "demo.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /config
      backendRefs:
      - name: homer-portal-config
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: homer-config-route-policies
